대화 타입, 장소 타입 연관 기능 - 단위 테스트 작성 (#104)
* chore: cd 스크립트 비활성화(#100)

* feat: 클래스명 수정(#100)

* test : 대화 타입 연관 비즈니스 로직 단위테스트 작성(#100)

* test: 대화 타입, 장소 타입 연관 API 단위테스트 모의 데이터 값 변경(#100)

* feat: 대화 타입 수정 로직 변경, 테스트 코드 변경(#100)

* feat: PlaceType 생성자 추가(#100)

* feat: 사용자 장소 타입 수정 로직 변경(#100)

* test : 장소 타입 연관 비즈니스 로직 단위테스트 작성(#100)